<resources>
    <string name="app_name">App Usage Data</string>
    <string name="title">Let\u0027s become aware!</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_password_confirm">Confirm Password</string>
    <string name="hint_email">Email</string>
    <string name="sign_in_text_top">Don\u0027t have an account?</string>
    <string name="sign_in_text_bottom">Create a new account</string>
    <string name="sign_up_text_top">Already have an account?</string>
    <string name="sign_up_text_bottom">Sign in</string>
    <string name="header_stats">APP USAGE STATISTICS</string>
    <string name="app_usage_stats">No data has been found.</string>
    <string name="spp_stat_title">Click here to</string>
    <string name="app_stat_subtitle">view your data usage of today</string>
</resources>
