<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignUpFragment"
    android:background="@color/colorPampas">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/sign_in_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="50dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/logo_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="20dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    android:hint="@string/hint_username">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username_text_edit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHighlight="@color/colorOuterSpace"
                        android:textColorLink="@color/colorOuterSpace" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    android:hint="@string/hint_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_text_edit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHighlight="@color/colorOuterSpace"
                        android:textColorLink="@color/colorOuterSpace" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="password_toggle"
                    android:hint="@string/hint_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_text_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:textColorHighlight="@color/colorOuterSpace"
                        android:textColorLink="@color/colorOuterSpace" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_confirm_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="password_toggle"
                    android:hint="@string/hint_password_confirm">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_confirm_text_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:textColorHighlight="@color/colorOuterSpace"
                        android:textColorLink="@color/colorOuterSpace" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/sign_in_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorLimedSpruce"
                android:text="SIGN UP"
                android:textColor="@color/colorWhite" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="20dp"
                android:background="@color/colorGrey"/>

            <TextView
                android:id="@+id/sign_up_text_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/sign_up_text_top"
                android:textAlignment="center"
                android:textColor="@color/colorOuterSpace"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/sign_up_text_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_text_bottom"
                android:textAlignment="center"
                android:textColor="@color/colorAnzac"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/bottom_image_view"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:contentDescription="undraw image"
            android:src="@drawable/ic_undraw_winners"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>